--- a/home.html
+++ b/home.html
@@ -25,6 +25,8 @@
           <a class="navbar-brand" href="msa.html">
             exercise4
           </a>
-
+          <a class="navbar-brand" href="Index.html">
+            ps
+          </a>
     </body>
 </html>
